tests/ui/parser/issue-68987-unmatch-issue-3.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-68987-unmatch-issue-3.rs:8:1
   |
LL | fn f(i: u32, j: u32) {
   |                      - this opening brace...
...
LL |     }
   |     - ...matches this closing brace
LL | }
   | ^ unexpected closing delimiter

error: mismatched closing delimiter: `)`
  --> $DIR/issue-68987-unmatch-issue-3.rs:5:19
   |
LL |     while cnt < j {
   |                   ^ unclosed delimiter
LL |         write!&mut res, " ");
   |                            ^ mismatched closing delimiter

error: aborting due to 2 previous errors

